--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -1,5 +1,5 @@
 <div class="pt-3 pb-8 container" x-data="{ title: null }">
-  <h1 class="md:text-3xl text-2xl py-7">Account</h1>
+  <h1 class="md:text-3xl text-2xl py-7">Konto</h1>
   <div class="md:grid grid-cols-4 gap-6 block">
     <div class="col-span-1">
       <div class="">
@@ -13,7 +13,7 @@
         </div>
 
         <div class="py-2">
-          <h2 class="pb-2 font-semibold">Default Address</h2>
+          <h2 class="pb-2 font-semibold">Domyślny adres:</h2>
           {{ customer.default_address | format_address }}
         </div>
       </div>
@@ -22,7 +22,7 @@
     <div class="md:mt-5 mt-0 col-span-3">
       <div class="sm:overflow-hidden">
         <div class="">
-          <h3 class="text-2xl font-bold pb-2">Orders</h3>
+          <h3 class="text-2xl font-medium pb-2">Zamówienia</h3>
 
           <div class="mt-3 overflow-hidden overflow-x-auto">
             {% paginate customer.orders by 20 %}
@@ -30,20 +30,17 @@
                 <table class="min-w-full divide-y divide-gray-200 border">
                   <thead>
                     <tr>
-                      <th class="text-left px-3 py-2">Order Number</th>
-                      <th class="text-left px-3 py-2">Date</th>
-                      <th class="text-left px-3 py-2">Payment Status</th>
-                      <th class="text-left px-3 py-2">Fulfillment Status</th>
-                      <th class="text-left px-3 py-2">Total</th>
+                      <th class="text-left px-3 py-2">Numer zamówienia</th>
+                      <th class="text-left px-3 py-2">Data</th>
+                      <th class="text-left px-3 py-2">Status płatności</th>
+                      <th class="text-left px-3 py-2">Status zamówienia</th>
+                      <th class="text-left px-3 py-2">Suma</th>
                     </tr>
                   </thead>
                   <tbody>
                     {% for order in customer.orders %}
                       <tr class="border-b border-gray-300 font-bold">
-                        <td
-                          class="px-3 py-2 whitespace-nowrap"
-                          data-label="order number"
-                        >
+                        <td class="px-3 py-2 whitespace-nowrap" data-label="order number">
                           <a href="{{ order.customer_url }}">
                             <div class="flex -space-x-2 overflow-hidden">
                               {% for order_line in order.line_items limit: 3 %}
@@ -57,28 +54,16 @@
                             </span>
                           </a>
                         </td>
-                        <td
-                          class="px-3 py-2 whitespace-nowrap"
-                          data-label="Date"
-                        >
+                        <td class="px-3 py-2 whitespace-nowrap" data-label="Date">
                           {{ order.created_at | time_tag: format: 'date' }}
                         </td>
-                        <td
-                          class="px-3 py-2 whitespace-nowrap"
-                          data-label="Payment Status"
-                        >
+                        <td class="px-3 py-2 whitespace-nowrap" data-label="Payment Status">
                           {{ order.financial_status_label }}
                         </td>
-                        <td
-                          class="px-3 py-2 whitespace-nowrap"
-                          data-label="Fulfillment Status"
-                        >
+                        <td class="px-3 py-2 whitespace-nowrap" data-label="Fulfillment Status">
                           {{ order.fulfillment_status_label }}
                         </td>
-                        <td
-                          class="px-3 py-2 whitespace-nowrap"
-                          data-label="Total"
-                        >
+                        <td class="px-3 py-2 whitespace-nowrap" data-label="Total">
                           {{ order.total_price | money }}
                         </td>
                       </tr>
@@ -86,12 +71,9 @@
                   </tbody>
                 </table>
               {% else %}
-                <p>You don't have any orders yet.</p>
-                <a
-                  href="{{ routes.all_products_collection_url }}"
-                  class="inline-block button mt-3"
-                >
-                  Continue shopping
+                <p>Nie masz jeszcze zamówień</p>
+                <a href="{{ routes.all_products_collection_url }}" class="inline-block button mt-3">
+                  Kontynuuj zakupy
                 </a>
               {% endif %}
 
@@ -104,11 +86,6 @@
           </div>
         </div>
 
-        <div class="py-3 text-right no-print">
-          <button type="submit" @click="window.print();" class="link">
-            Print
-          </button>
-        </div>
       </div>
     </div>
   </div>
