--- a/assets/app.css
+++ b/assets/app.css
@@ -195,6 +195,7 @@
   }
 }
 .swiper-thumbs .swiper-slide {
+  cursor: pointer;
   border-width: 2px;
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
