--- a/sections/collection-grid.liquid
+++ b/sections/collection-grid.liquid
@@ -4,6 +4,7 @@
     {% render 'collection-product-grid'
       , grid_class: 'md:grid-cols-4'
       , image_class: 'md:h-[200px] w-auto h-[150px]'
-      , pagination: 12 %}
+      , pagination: 12
+      , isPagination: true %}
   </div>
 </div>
