--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -4,6 +4,7 @@
     , limit: 12
     , grid_class: 'grid-cols-3'
     , image_class: 'md:h-[300px] w-auto h-[150px]'
+    , isPagination: false
     , collection: section.settings.featured_collection %}
 </div>
 
