--- a/assets/app.css
+++ b/assets/app.css
@@ -208,12 +208,12 @@
 .swiper-thumbs .swiper-slide:hover {
   border-width: 2px !important;
   --tw-border-opacity: 1 !important;
-  border-color: rgb(153 138 95 / var(--tw-border-opacity)) !important;
+  border-color: rgb(236 118 74 / var(--tw-border-opacity)) !important;
 }
 .swiper-slide-thumb-active {
   border-width: 2px !important;
   --tw-border-opacity: 1 !important;
-  border-color: rgb(153 138 95 / var(--tw-border-opacity)) !important;
+  border-color: rgb(236 118 74 / var(--tw-border-opacity)) !important;
 }
 /* ! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com */
 /*
@@ -706,7 +706,7 @@ input[type='number']::-webkit-outer-spin-button,
     cursor: pointer;
     border-radius: 0.5rem;
     --tw-bg-opacity: 1;
-    background-color: rgb(153 138 95 / var(--tw-bg-opacity));
+    background-color: rgb(236 118 74 / var(--tw-bg-opacity));
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 0.5rem;
@@ -753,7 +753,7 @@ input[type='number']::-webkit-outer-spin-button,
   border-width: 1px;
   padding-left: 1rem;
   padding-right: 1rem;
-  outline-color: #8baca5;
+  outline-color: #ec764a;
 }
 .link {
   display: inline-block;
@@ -763,7 +763,7 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .link:hover {
   --tw-text-opacity: 1;
-  color: rgb(139 172 165 / var(--tw-text-opacity));
+  color: rgb(236 118 74 / var(--tw-text-opacity));
   text-decoration-line: none;
 }
 .sr-only {
@@ -1454,7 +1454,7 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .border-primary {
   --tw-border-opacity: 1;
-  border-color: rgb(153 138 95 / var(--tw-border-opacity));
+  border-color: rgb(236 118 74 / var(--tw-border-opacity));
 }
 .border-red-600 {
   --tw-border-opacity: 1;
@@ -1470,7 +1470,7 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .bg-accent {
   --tw-bg-opacity: 1;
-  background-color: rgb(139 172 165 / var(--tw-bg-opacity));
+  background-color: rgb(236 118 74 / var(--tw-bg-opacity));
 }
 .bg-background {
   --tw-bg-opacity: 1;
@@ -1506,7 +1506,7 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .bg-hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(139 172 165 / var(--tw-bg-opacity));
+  background-color: rgb(236 118 74 / var(--tw-bg-opacity));
 }
 .bg-red-600 {
   --tw-bg-opacity: 1;
@@ -1541,7 +1541,7 @@ input[type='number']::-webkit-outer-spin-button,
   --tw-bg-opacity: 0.8;
 }
 .fill-accent {
-  fill: #8baca5;
+  fill: #ec764a;
 }
 .fill-textColor {
   fill: #1d1d1d;
@@ -1769,7 +1769,7 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .text-accent {
   --tw-text-opacity: 1;
-  color: rgb(139 172 165 / var(--tw-text-opacity));
+  color: rgb(236 118 74 / var(--tw-text-opacity));
 }
 .text-black {
   --tw-text-opacity: 1;
@@ -1793,7 +1793,7 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .text-hover {
   --tw-text-opacity: 1;
-  color: rgb(139 172 165 / var(--tw-text-opacity));
+  color: rgb(236 118 74 / var(--tw-text-opacity));
 }
 .text-neutral-600 {
   --tw-text-opacity: 1;
@@ -1805,7 +1805,7 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .text-primary {
   --tw-text-opacity: 1;
-  color: rgb(153 138 95 / var(--tw-text-opacity));
+  color: rgb(236 118 74 / var(--tw-text-opacity));
 }
 .text-red-500 {
   --tw-text-opacity: 1;
@@ -1865,7 +1865,7 @@ input[type='number']::-webkit-outer-spin-button,
   text-underline-offset: 2px;
 }
 .accent-accent {
-  accent-color: #8baca5;
+  accent-color: #ec764a;
 }
 .opacity-25 {
   opacity: 0.25;
@@ -2063,26 +2063,26 @@ div[data-block-handle='ig_feed'] {
 }
 .hover\:bg-hover:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(139 172 165 / var(--tw-bg-opacity));
+  background-color: rgb(236 118 74 / var(--tw-bg-opacity));
 }
 .hover\:bg-red-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
 .hover\:fill-accent:hover {
-  fill: #8baca5;
+  fill: #ec764a;
 }
 .hover\:text-accent:hover {
   --tw-text-opacity: 1;
-  color: rgb(139 172 165 / var(--tw-text-opacity));
+  color: rgb(236 118 74 / var(--tw-text-opacity));
 }
 .hover\:text-hover:hover {
   --tw-text-opacity: 1;
-  color: rgb(139 172 165 / var(--tw-text-opacity));
+  color: rgb(236 118 74 / var(--tw-text-opacity));
 }
 .hover\:text-primary:hover {
   --tw-text-opacity: 1;
-  color: rgb(153 138 95 / var(--tw-text-opacity));
+  color: rgb(236 118 74 / var(--tw-text-opacity));
 }
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -2128,15 +2128,15 @@ div[data-block-handle='ig_feed'] {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .group:hover .group-hover\:fill-accent {
-  fill: #8baca5;
+  fill: #ec764a;
 }
 .group:hover .group-hover\:text-accent {
   --tw-text-opacity: 1;
-  color: rgb(139 172 165 / var(--tw-text-opacity));
+  color: rgb(236 118 74 / var(--tw-text-opacity));
 }
 .group:hover .group-hover\:text-hover {
   --tw-text-opacity: 1;
-  color: rgb(139 172 165 / var(--tw-text-opacity));
+  color: rgb(236 118 74 / var(--tw-text-opacity));
 }
 .group:hover .group-hover\:underline {
   text-decoration-line: underline;
@@ -2374,11 +2374,11 @@ div[data-block-handle='ig_feed'] {
 }
 .peer:checked ~ .peer-checked\:\[\&_\.custom-checkbox\]\:border-primary .custom-checkbox {
   --tw-border-opacity: 1;
-  border-color: rgb(153 138 95 / var(--tw-border-opacity));
+  border-color: rgb(236 118 74 / var(--tw-border-opacity));
 }
 .peer:checked ~ .peer-checked\:\[\&_\.custom-checkbox\]\:bg-primary .custom-checkbox {
   --tw-bg-opacity: 1;
-  background-color: rgb(153 138 95 / var(--tw-bg-opacity));
+  background-color: rgb(236 118 74 / var(--tw-bg-opacity));
 }
 .\[\&_svg\]\:scale-0 svg {
   --tw-scale-x: 0;
