--- a/assets/app.css
+++ b/assets/app.css
@@ -780,6 +780,9 @@ input[type='number']::-webkit-outer-spin-button,
 .pointer-events-none {
   pointer-events: none;
 }
+.collapse {
+  visibility: collapse;
+}
 .fixed {
   position: fixed;
 }
@@ -1000,11 +1003,26 @@ input[type='number']::-webkit-outer-spin-button,
 .mt-\[20px\] {
   margin-top: 20px;
 }
+.mb-0 {
+  margin-bottom: 0px;
+}
+.mt-auto {
+  margin-top: auto;
+}
+.mt-12 {
+  margin-top: 3rem;
+}
+.mt-14 {
+  margin-top: 3.5rem;
+}
 .block {
   display: block;
 }
 .inline-block {
   display: inline-block;
+}
+.inline {
+  display: inline;
 }
 .flex {
   display: flex;
@@ -1087,10 +1105,55 @@ input[type='number']::-webkit-outer-spin-button,
 .h-screen {
   height: 100vh;
 }
+.h-\[100vh\] {
+  height: 100vh;
+}
+.h-\[90\%\] {
+  height: 90%;
+}
+.h-\[100\%\] {
+  height: 100%;
+}
+.h-1\/5 {
+  height: 20%;
+}
+.h-12 {
+  height: 3rem;
+}
+.h-\[calc\(100\%-48px\)\] {
+  height: calc(100% - 48px);
+}
+.h-\[calc\(100\%-64px\)\] {
+  height: calc(100% - 64px);
+}
+.h-40 {
+  height: 10rem;
+}
+.h-\[calc\(100\%-80px\)\] {
+  height: calc(100% - 80px);
+}
 .max-h-\[70vh\] {
   max-height: 70vh;
 }
+.max-h-\[200px\] {
+  max-height: 200px;
+}
+.max-h-\[100px\] {
+  max-height: 100px;
+}
+.max-h-full {
+  max-height: 100%;
+}
+.max-h-screen {
+  max-height: 100vh;
+}
 .min-h-screen {
+  min-height: 100vh;
+}
+.min-h-full {
+  min-height: 100%;
+}
+.min-h-\[100vh\] {
   min-height: 100vh;
 }
 .w-1\/2 {
@@ -1186,11 +1249,17 @@ input[type='number']::-webkit-outer-spin-button,
 .flex-1 {
   flex: 1 1 0%;
 }
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
 .flex-grow {
   flex-grow: 1;
 }
 .table-auto {
   table-layout: auto;
+}
+.border-collapse {
+  border-collapse: collapse;
 }
 .origin-right {
   transform-origin: right;
@@ -1217,6 +1286,10 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .rotate-180 {
   --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.rotate-90 {
+  --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-150 {
@@ -1273,6 +1346,9 @@ input[type='number']::-webkit-outer-spin-button,
 .grid-cols-\[1fr_2fr\] {
   grid-template-columns: 1fr 2fr;
 }
+.grid-cols-\[1fr_1fr\] {
+  grid-template-columns: 1fr 1fr;
+}
 .flex-row {
   flex-direction: row;
 }
@@ -1311,6 +1387,9 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .justify-evenly {
   justify-content: space-evenly;
+}
+.justify-stretch {
+  justify-content: stretch;
 }
 .gap-1 {
   gap: 0.25rem;
@@ -1387,6 +1466,12 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .self-center {
   align-self: center;
+}
+.self-stretch {
+  align-self: stretch;
+}
+.justify-self-end {
+  justify-self: end;
 }
 .overflow-auto {
   overflow: auto;
@@ -1666,6 +1751,9 @@ input[type='number']::-webkit-outer-spin-button,
 .pt-8 {
   padding-top: 2rem;
 }
+.pt-2 {
+  padding-top: 0.5rem;
+}
 .text-left {
   text-align: left;
 }
@@ -1712,6 +1800,10 @@ input[type='number']::-webkit-outer-spin-button,
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .font-bold {
   font-weight: 700;
@@ -2020,6 +2112,14 @@ div[data-block-handle='ig_feed'] {
 .placeholder\:text-white\/90::placeholder {
   color: rgb(255 255 255 / 0.9);
 }
+.hover\:rotate-90:hover {
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.hover\:-rotate-90:hover {
+  --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -2070,6 +2170,9 @@ div[data-block-handle='ig_feed'] {
   background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
 .hover\:fill-accent:hover {
+  fill: #ec764a;
+}
+.hover\:fill-primary:hover {
   fill: #ec764a;
 }
 .hover\:text-accent:hover {
@@ -2281,6 +2384,9 @@ div[data-block-handle='ig_feed'] {
   }
   .md\:w-full {
     width: 100%;
+  }
+  .md\:w-\[400px\] {
+    width: 400px;
   }
   .md\:max-w-\[450px\] {
     max-width: 450px;
