--- a/sections/cart-page.liquid
+++ b/sections/cart-page.liquid
@@ -1,7 +1,6 @@
-
-
-<div class="container"
-    x-data="{
+<div
+  class="container"
+  x-data="{
       loading: false,
       updateCart(){
           // send fetch reqeust to update cart
@@ -18,18 +17,16 @@
           })
       }
     }"
-		@update-cart.window="updateCart;"
-	
-	>
+  @update-cart.window="updateCart;">
 
-	<h1 class="text-3xl font-bold mb-5">Cart</h1>
+  <h1 class="text-4xl font-medium mb-5">Koszyk</h1>
 
-	<hr>
+  <hr>
 
-	{% render 'loader' %}
+  {% render 'loader' %}
 
-	<div class="" x-ref="cart_content">
-		{% render 'cart-page-content' %}
-	</div>
+  <div class="" x-ref="cart_content">
+    {% render 'cart-page-content' %}
+  </div>
 
 </div>
