--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -1,6 +1,6 @@
 <div
   x-data="{ 
-		showCartDrawer: false,
+		showCartDrawer: true,
 		loading: false,
     
 		updateCart(){
@@ -24,7 +24,7 @@
     x-cloak
     x-show="showCartDrawer"
     @click="showCartDrawer = false; document.body.classList.remove('overflow-hidden')"
-    class="overlay transition-all z-40 w-screen h-screen top-0 fixed backdrop-blur-sm bg-white/50"></div>
+    class="overlay transition-all z-40 w-screen h-full top-0 fixed backdrop-blur-sm bg-white/50"></div>
 
   <div
     x-cloak
@@ -35,7 +35,7 @@
     x-transition:leave="transition ease-in-out duration-300 transform"
     x-transition:leave-start="translate-x-0"
     x-transition:leave-end="translate-x-full"
-    class="fixed transition z-50 bg-white top-0 right-0 md:w-[450px] w-full flex flex-col shadow-l h-screen">
+    class="fixed transition z-50 bg-white top-0 right-0 md:w-[450px] w-full flex flex-col shadow-l h-full">
     <div class="p-5 flex items-center justify-between border border-b-1 border-off-white shadow-sm">
       <h2 class="text-4xl font-normal hover:text-primary">
         <a href="{{ routes.cart_url }}">Koszyk</a>
@@ -46,7 +46,7 @@
       </span>
     </div>
     {% render 'loader' %}
-    <div x-ref="cart_drawer_content" class="relative h-[calc(100%-80px)]">
+    <div x-ref="cart_drawer_content" class="relative h-full">
       {% render 'cart-drawer-content' %}
     </div>
   </div>
