Fixed login url (if logged in, skip login)

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -25,7 +25,7 @@
         @click="window.Functions.showCartDrawer()">{% render 'icon-shopping-bag' %}</a>
 
       {% if shop.customer_accounts_enabled %}
-        <a class="p-3 cursor-pointer rounded-full hover:bg-gray-100 hidden lg:block" href="{{ routes.account_login_url }}">{% render 'icon-login' %}</a>
+        <a class="p-3 cursor-pointer rounded-full hover:bg-gray-100 hidden lg:block" href="{{ routes.account_url }}">{% render 'icon-login' %}</a>
       {% endif %}
     </div>
   </div>
