--- a/snippets/mobile-menu.liquid
+++ b/snippets/mobile-menu.liquid
@@ -38,7 +38,7 @@
     {% endfor %}
     {% if shop.customer_accounts_enabled %}
       <div id="test" class="flex flex-col w-full relative items-stretch">
-        <a href="{{ routes.account_login_url }}" class="px-6 py-4 hover:text-hover hover:bg-background-hover transition text-center md:text-left">zaloguj</a>
+        <a href="{{ routes.account_url }}" class="px-6 py-4 hover:text-hover hover:bg-background-hover transition text-center md:text-left">zaloguj</a>
       </div>
     {% endif %}
   </nav>
