added login layout

--- a/assets/app.css
+++ b/assets/app.css
@@ -1110,6 +1110,9 @@ input[type='number']::-webkit-outer-spin-button,
 .min-h-screen {
   min-height: 100vh;
 }
+.min-h-full {
+  min-height: 100%;
+}
 .w-1\/2 {
   width: 50%;
 }
@@ -1154,6 +1157,15 @@ input[type='number']::-webkit-outer-spin-button,
 .w-screen {
   width: 100vw;
 }
+.w-\[30vmin\] {
+  width: 30vmin;
+}
+.w-\[50vmin\] {
+  width: 50vmin;
+}
+.w-\[70vmin\] {
+  width: 70vmin;
+}
 .min-w-\[250px\] {
   min-width: 250px;
 }
@@ -1196,6 +1208,9 @@ input[type='number']::-webkit-outer-spin-button,
 }
 .max-w-sm {
   max-width: 24rem;
+}
+.max-w-\[300px\] {
+  max-width: 300px;
 }
 .flex-1 {
   flex: 1 1 0%;
