--- a/layout/login.liquid
+++ b/layout/login.liquid
@@ -42,22 +42,19 @@
     <script defer src="{{ 'slider.js' | asset_url }}"></script>
     <script defer src="{{ 'app.js' | asset_url }}"></script>
 
-
     <script defer src="{{ 'global-functions.js' | asset_url }}"></script>
     {{ content_for_header }}
   </head>
 
   <body class="text-textColor">
-    <div class="w-full flex flex-col">
-      {% sections 'header-group' %}
+    <div class="w-full flex flex-col items-center justify-center h-full p-10 gap-10">
+      <div class="w-[70vmin] max-w-[350px]">{% render 'logo-animated' %}</div>
       <main
         role="main"
         class="flex-grow"
         tabindex="-1">
         {{ content_for_layout }}
       </main>
-      {% section 'footer' %}
-      {% section 'cart-drawer' %}
     </div>
   </body>
 </html>
