--- a/snippets/cart-page-content.liquid
+++ b/snippets/cart-page-content.liquid
@@ -1,7 +1,7 @@
 <form
   action="{{ routes.cart_url }}"
   method="post"
-  class="h-full relative">
+  class="h-full flex flex-col relative">
   {% if cart.item_count > 0 %}
     {% assign total_savings = 0 %}
     <div class="divide-y">
@@ -96,18 +96,28 @@
       </div>
     {% endif %}
 
-    <div class="text-right pb-2 text-lg">
-      <span class="font-medium">Kwota do zapłaty:
-      </span>
-      <span>{{ cart.total_price | money_with_currency }}</span>
-    </div>
+    <div class="flex flex-col sm:flex-row justify-between items-center w-full gap-2">
+      <div>
+        <div class="flex flex-col text-center sm:text-left sm:flex-row sm:gap-2 text-lg px-2">
+          <span class="font-medium">Kwota do zapłaty:
+          </span>
+          <span class="">{{ cart.total_price | money }}</span>
+        </div>
+        <div class="flex flex-col text-center sm:text-left sm:flex-row sm:gap-2 text-lg px-2">
+          <span class="font-medium">+ dostawa od:
+          </span>
+          <span>16 zł</span>
+        </div>
+      </div>
 
-    <div class="text-right mt-3">
       <button
         name="checkout"
         type="submit"
-        class="button">Do kasy</button>
+        class="button">DO KASY
+      </button>
+
     </div>
+
   {% else %}
     <div class="flex flex-col justify-center items-center gap-5 mt-10">
       {% render 'icon-cart'
