Refactored cart script, added giftWrap functionality

--- a/assets/app.css
+++ b/assets/app.css
@@ -1020,6 +1020,9 @@ input[type='number']::-webkit-outer-spin-button,
 .mt-auto {
   margin-top: auto;
 }
+.mr-2 {
+  margin-right: 0.5rem;
+}
 .block {
   display: block;
 }
