--- a/snippets/cart-page-content.liquid
+++ b/snippets/cart-page-content.liquid
@@ -110,6 +110,7 @@
         </div>
       </div>
 
+
       <button
         name="checkout"
         type="submit"
@@ -117,6 +118,7 @@
       </button>
 
     </div>
+    {% render 'cart-gift-wrap' %}
 
   {% else %}
     <div class="flex flex-col justify-center items-center gap-5 mt-10">
